# BeermoneyClaude

./: .env.example  .gitignore  CLAUDE.md  MASTERPLAN.md  MEGA_PROMPT.md  SPRINT3_PROMPT.md  SPRINT4_PROMPT.md  SPRINT6_PROMPT.md
.claude/: settings.local.json
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/queue/: page.tsx
dashboard/src/components/dashboard/: EarningsChart.tsx  RecentActivity.tsx  StatsCards.tsx  UpcomingDeadlines.tsx
dashboard/src/components/layout/: Header.tsx  Sidebar.tsx
dashboard/src/components/queue/: CompleteTaskDialog.tsx  QueueCard.tsx  QueueList.tsx
dashboard/src/hooks/: useAgentLogs.ts  useEarnings.ts  usePlatforms.ts  useQueue.ts
dashboard/src/lib/: constants.ts  mock-data.ts
dashboard/src/lib/supabase/: client.ts  types.ts
engine/: pyproject.toml  requirements.txt  run.py
engine/core/: browser.py  config.py  db.py  logger.py  queue.py  scheduler.py  session.py
engine/data/: platforms.json  profile.example.json
engine/docs/PLATFORM_FICHAS/: CLICKWORKER.md  PROLIFIC.md
engine/notifier/: alerts.py  email_monitor.py  telegram_bot.py
engine/plugins/: base.py  clickworker.py  prolific.py
engine/profiler/: form_filler.py  profile_data.py  screener_bot.py
engine/scripts/: research_clickworker.py  research_prolific.py  test_clickworker.py  test_night_loop.py  test_prolific.py
